--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.10"
+  },
+  "devDependencies": {
+    "prettier": "3.6.1",
+    "prettier-plugin-astro": "0.14.1",
+    "prettier-plugin-tailwindcss": "0.6.13"
   }
 }
