--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "format": "npx prettier . --write"
   },
   "dependencies": {
+    "@astrojs/markdoc": "^0.15.0",
     "@astrojs/react": "^4.3.0",
+    "@keystatic/astro": "^5.0.6",
+    "@keystatic/core": "^0.5.47",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.10",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "astro": "^5.10.1",
+    "astro": "^5.11.1",
     "astro-icon": "^1.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
