--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/markdoc": "^0.15.5",
     "@astrojs/react": "^4.3.0",
+    "@astrojs/vercel": "^8.2.7",
     "@keystatic/astro": "^5.0.6",
     "@keystatic/core": "^0.5.47",
     "@radix-ui/react-dialog": "^1.1.14",
